tests/integration/errors/011_eof_mid_structure.nesl
<<<<<<<<<nesl
{
  key = R"""pv(value)pv"""
  nested = {
    item = R"""pv(incomplete)pv"""